Doc: Big update
overall: Added part introductions
conclusion: Updated the skeleton with subchapters
experiment: Added empty subchapters to analysis, renamed review to summary
introduction: Wrote a short description of the parts
design: Wrote about the gameplay elements
study: Added Games History, Immersion and Interaction Devices from old project
study: Wrote Technology Study, only missing summary

--- a/doc/report/conclusion/chp_evaluation.tex
+++ b/doc/report/conclusion/chp_evaluation.tex
@@ -1,1 +1,10 @@
 \chapter{Evaluation}
+
+
+\section{Evaluation of Project}
+
+
+\section{Evaluation of Technology}
+
+
+\section{Evaluation of the Game Prototype}
