--- a/doc/report/conclusion/chp_further_work.tex
+++ b/doc/report/conclusion/chp_further_work.tex
@@ -1,1 +1,6 @@
 \chapter{Further Work}
+% bullet liste istedet, kan se på det.
+\section{Extra Game Features}
+\section{Different Experiments}
+\section{Different Interaction Devices}
+\section{Release Game}
