--- a/doc/report/conclusion/part_conclusion.tex
+++ b/doc/report/conclusion/part_conclusion.tex
@@ -1,3 +1,5 @@
+\epigraphhead[400]{This part concludes the thesis and evaluates the experience gained in this project, as well as the conclusion and insight into possible further work for this project.}
+
 \part{Evaluation and Conclusion}
 \input{conclusion/chp_evaluation}
 \input{conclusion/chp_conclusion}
