--- a/doc/report/experiment/chp_results_and_analysis.tex
+++ b/doc/report/experiment/chp_results_and_analysis.tex
@@ -5,7 +5,7 @@ This chapter presents the results of the play testing session along with observa
 \section{Results}
 The statistical mean, variance and standard deviation of the questions from the questionnaire can be seen in Table \ref{tab:stat_results}. The ages of the participants were ranging from six to nine years old with the composition being: six six year olds (32\%), five seven year olds (26\%), five eight year olds (26\%), and three nine year olds (16\%). Out of the total of 19 participants, 8 of them were female (44\%). Over half of the children told that they had a lot of prior game experience (58\%), seven said that they had some game experience (37\%), and one told that they had no prior game experience(5\%).
 
-\note{Føler at denne delen er litt tynn. Hvordan kan jeg fylle den ut bedre? skal jeg nevne ting fra tabellen/ på hvilken måte kan jeg nevne ting fra tabellen? Litt input på selve tabellen hadde også vært fint.}
+%TODO: Endre tabellen til å være mye enklere, ha detaljer i appendix
 
 \begin{table}[!ht]
 	\centering
@@ -45,5 +45,16 @@ This section describes some general observations that were made during the play 
 
 The majority of the children were very cooperative with each other and there were a lot of communication between them on things like how to conquer the different obstacles and what to do next. Learning the controls of the alien and the hand character was the focus of the first level, but the movement for the alien character was more complex, which led to some players wanting to switch controllers. However on the following levels the tasks for the hand character were more complicated and the players often wanted to switch back to the hand character. The game was possibly a little too hard for the children that we tested, as some were struggling to beat the first level.  Despite this, most of the children thought the game difficulty was adequate and all of the players thought that the game was fun and would like to play it at home.
 
+
 \section{Analysis}
-\note{Trenger litt hjelp med denne delen, er ikke helt sikker på hvordan jeg skal analysere resultatene. Skal jeg bruke noe slags fancy matematikk og statistisk analyse? Skal jeg diskutere spørsmålene hver for seg? burde jeg kanskje dele det opp inn i de forskjellige gameflow kategoriene(concentration, challenge, etc.). Kanskje ha en underkaputtel for kjønnsforskjeller?}
+\subsection{Concentration}
+\subsection{Goal Clarity}
+\subsection{Feedback}
+\subsection{Challenge}
+\subsection{Autonomy}
+\subsection{Immersion}
+\subsection{Social Interaction}
+\subsection{Game Enjoyment}
+\subsection{Background Differences}
+
+\section{Summary}
