--- a/doc/report/experiment/chp_the_test.tex
+++ b/doc/report/experiment/chp_the_test.tex
@@ -1,10 +1,11 @@
 \chapter{Play Testing}
 \section{Plan}
-After creating the questionnaire and establishing the date and loaction for the play testing, the testing session was planned. The play test would occur from 2PM to 5PM on the 11th of May on Buvik School's after school program. 
+After creating the questionnaire and establishing the date and location for the play testing, the testing session was planned. The play test would occur from 2PM to 5PM on the 11th of May on Buvik School's after school program. 
 
 There were two interviewers: the author and the supervisor, which meant that two tests could be run simultaneously with a total of four children at once. The testing of the video game prototype was planned to be about 15 minutes in length with about five minutes of interviewing the children after, with the help of the questionnaire. This turns out to a total of 36 with maximum efficiency for the three hours planned. 
 
 This number is quite inflated, because it does not take into account setup and conclusion time, and the questionnaire time would be variable from child to child. However, this number was considered to be a maximum, but more realistically 20-25 participants were expected.
+
 
 \section{Execution}
 The setup for the play testing started at 2PM, in a medium sized room where two laptops were stationed with two controllers each. There were some small issues in the beginning, where the laptops was not recognizing the controllers, and the USB ports on one of the laptops were not working. One laptop also didn't have the most updated game prototype, so it had to be updated, but the issues were eventually solved. About 15-20 went to organizing the room and solving the initial problems.
@@ -20,5 +21,5 @@ A problem occurred with one of the laptops, where the game would start to drop f
 Towards the end of the play testing session most of the children had been picked up from the after school program and the testing was terminated. There were in total about two hours of testing with a total number of 19 participants. The number is odd because one of the children was picked up in the middle of the play testing.
 
 
-\section{Review}
+\section{Summary}
 Despite the initial technical difficulties and one of the laptops failing, the play test was deemed a success. The children all seemed excited to play and were attentive and well behaved when both playing and answering questions. Aside from the one child that was picked up in the middle of playing, all of the children that participated answered all of the questions. There could have been better preparation before the test to identify the faulty laptop, and making sure that they were both updated with the latest version of the game.
