--- a/doc/report/experiment/part_experiment.tex
+++ b/doc/report/experiment/part_experiment.tex
@@ -1,3 +1,5 @@
+\epigraphhead[400]{This part shows the preparation, results, and the analysis of the play testing that was performed.}
+
 \part{Experiment}
 \input{experiment/chp_preparations}
 \input{experiment/chp_the_test}
