--- a/doc/report/init/glossaries.tex
+++ b/doc/report/init/glossaries.tex
@@ -3,3 +3,28 @@
 % For subsequent uses write: \gls{<tag>} (without the backslash on the end).
 \newacronym{ntnu}{NTNU}{Norwegian University of Science and Technology}
 \newacronym{gqm}{GQM}{Goal Question Metric}
+
+\newacronym{nes}{NES}{Nintendo Entertainment System}
+\newacronym{snes}{SNES}{Super Nintendo Entertainment System}
+\newacronym{ds}{DS}{Nintendo DS}
+\newacronym{3ds}{3DS}{Nintendo 3DS}
+\newacronym{n64}{N64}{Nintendo 64}
+\newacronym{wii}{Wii}{Nintendo Wii}
+\newacronym{wiiu}{WiiU}{Nintendo WiiU}
+
+\newacronym{xb}{Xbox}{Microsoft Xbox}
+\newacronym{xb360}{Xbox 360}{Microsoft Xbox 360}
+\newacronym{xbone}{Xbox One}{Microsoft Xbox One}
+
+\newacronym{ps1}{PS1}{Sony PlayStation 1}
+\newacronym{ps2}{PS2}{Sony PlayStation 2}
+\newacronym{ps3}{PS3}{Sony PlayStation 3}
+\newacronym{ps4}{PS4}{Sony PlayStation 4}
+
+\newacronym{vr}{VR}{Virtual Reality}
+\newacronym{ai}{AI}{Artificial Intelligence}
+\newacronym{ar}{AR}{Augmented Reality}
+
+\newacronym{rts}{RTS}{Real Time Strategy}
+\newacronym{ir}{IR}{infrared}
+\newacronym{dpad}{D-pad}{Directional pad}
