--- a/doc/report/introduction/chp_introduction.tex
+++ b/doc/report/introduction/chp_introduction.tex
@@ -10,6 +10,7 @@ Proprietary input devices like motion controls for video game consoles mostly us
 \note{Nevne social interaction i spill, ønsker å se på samarbeid, spesielt blandt barn. boosting av sosial interaction.}
 %TODO: nevne social interaction
 %TODO: ønsket å se på samarbeid, spsielt mellom barn. boosting av social interaction. nevne i motivasjon og.
+%
 
 \section{Context}
 This report is an extension of work done in a specialization project where I and Kjell R. Elstad explored different game technologies and concepts that goes into creating innovative video games. I was interested and continuing this work and to create a game prototype of one of the game concepts that were created in the specialization project.
@@ -22,7 +23,7 @@ Video games have always been a big part in my life. I grew up playing video game
 
 
 \section{Problem Description}
-The following problem description is based on the an earlier version given for the specialization project:
+The following problem description is based on the an earlier version given for the master's thesis:
 
 \begin{displayquote}
 	In this project, the goal is to prototype an innovative game(s) and test this game(s) on users. The innovation can be in the type of gameplay the game provides, how it combines various game genres, what technology is used to control or play the game, how the social interaction between players is supported, and the purpose of the game.
@@ -30,9 +31,7 @@ The following problem description is based on the an earlier version given for t
 	The first phase of the project will include a study of innovative games, game history, game technologies and game concepts, the second phase will be to implement one or more prototype, and the third phase will be to evaluate the concept through play-testing on real users.
 \end{displayquote}
 
-This project will cover the second and third phase of the overall project outline which covers game prototyping and play-testing. 
-
-\note{Burde jeg ha en slags overordnet problemstilling for hele prosjektet?}
+The first phase of this project was covered in the specialization project. This master's thesis will cover the second and third phase of the overall project outline which covers game prototyping and play-testing.
 
 
 \section{Structure}
@@ -40,8 +39,16 @@ The structure of this thesis is divided into five parts which roughly correspond
 \begin{description}
 	\item[Part I: Introduction and Methodology]
 	The introduction provides the context and motivation behind the project, the problem statement and the structure of this report.
+	
 	\item[Part II: Literature Study]
+	The literature study will look into games history, various interaction devices, game immersion, and game development technologies.
+	
 	\item[Part III: Design and Implementation]
+	The design and implementation part describes the design, architecture and implementation of the game prototype.
+	
 	\item[Part IV: Experimentation]
+	The experimentation part presents the planning, execution, and results of the play testing that was performed.
+	
 	\item[Part V: Evaluation and Conclusion]
+	
 \end{description}
