--- a/doc/report/introduction/part_intro.tex
+++ b/doc/report/introduction/part_intro.tex
@@ -1,3 +1,5 @@
+\epigraphhead[400]{This part introduces the background and context for the thesis, as well as describing the methodology that went into answering the research questions presented.}
+
 \part{Introduction and Methodology}
 \input{introduction/chp_introduction}
 \input{introduction/chp_methodology}
