--- a/doc/report/references.bib
+++ b/doc/report/references.bib
@@ -19,3 +19,663 @@
 	year={2005},
 	publisher={ACM}
 }
+
+@unpublished{overmars2012,
+	author = "Mark Overmars",
+	title = "A Brief History of Computer Games",
+	year = "2012",
+	month = "01",
+	note = "\url{http://www.cs.uu.nl/docs/vakken/b2go/literature/history_of_games.pdf}",
+}
+
+@inproceedings{cummings2007evolution,
+	title={The evolution of game controllers and control schemes and their effect on their games},
+	author={Cummings, Alastair H},
+	booktitle={The 17th Annual University of Southampton Multimedia Systems Conference},
+	volume={21},
+	year={2007}
+}
+
+@inproceedings{mcarthur2009empirical,
+	title={An empirical comparison of Wiimote gun attachments for pointing tasks},
+	author={McArthur, Victoria and Castellucci, Steven J and MacKenzie, I Scott},
+	booktitle={Proceedings of the 1st ACM SIGCHI symposium on Engineering interactive computing systems},
+	pages={203--208},
+	year={2009},
+	organization={ACM}
+}
+
+@article{lee2008hacking,
+	title={Hacking the nintendo wii remote},
+	author={Lee, Johnny Chung},
+	journal={Pervasive Computing, IEEE},
+	volume={7},
+	number={3},
+	pages={39--45},
+	year={2008},
+	publisher={IEEE}
+}
+
+@inproceedings{murao2011evaluating,
+	title={Evaluating gesture recognition by multiple-sensor-containing mobile devices},
+	author={Murao, Kazuya and Terada, Tsutomu and Yano, Ai and Matsukura, Ryuichi},
+	booktitle={Wearable Computers (ISWC), 2011 15th Annual International Symposium on},
+	pages={55--58},
+	year={2011},
+	organization={IEEE}
+}
+
+@article{wingrave2010wiimote,
+	title={The wiimote and beyond: Spatially convenient devices for 3d user interfaces},
+	author={Wingrave, Chadwick and Williamson, Brian and Varcholik, Paul D and Rose, Jeremy and Miller, Andrew and Charbonneau, Emiko and Bott, Jared and LaViola Jr, Joseph J},
+	journal={Computer Graphics and Applications, IEEE},
+	volume={30},
+	number={2},
+	pages={71--85},
+	year={2010},
+	publisher={IEEE}
+}
+
+@InCollection{sep-computing-history,
+	author       =	{Copeland, B. Jack},
+	title        =	{The Modern History of Computing},
+	booktitle    =	{The Stanford Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{http://plato.stanford.edu/archives/fall2008/entries/computing-history/}},
+	year         =	{2008},
+	edition      =	{Fall 2008},
+}
+
+@unpublished{winter2013,
+	author = "David Winter",
+	title = "Noughts And Crosses - The oldest graphical computer game",
+	year = "2013",
+	note = "\url{http://www.pong-story.com/1952.htm}",
+}
+
+@misc{okami2006,
+	author   = {Capcom},
+	title    = {{\=O}kami},
+	howpublished = "Game for {Sony Playstation 2} (2006). Ported to {Nintendo Wii} (2007). Rereleased {HD} version for {Sony Playstation 3} (2012)",
+}
+
+@inproceedings{donovan2013pretty,
+	title={Pretty as a pixel: Issues and challenges in developing a controlled vocabulary for video game visual styles},
+	author={Donovan, Andy and Cho, Hyerim and Magnifico, Chris and Lee, Jin Ha},
+	booktitle={Proceedings of the 13th ACM/IEEE-CS joint conference on Digital libraries},
+	pages={413--414},
+	year={2013},
+	organization={ACM}
+}
+
+@misc{duckhunt1984,
+	author = {Nintendo},
+	title = {Duck Hunt},
+	howpublished = {Game for NES released in 1984 (JP)}
+}
+
+@unpublished{oxford2011,
+	author = "Nadia Oxford",
+	title = "Ten Facts about the Great Video Game Crash of '83",
+	year = "2011",
+	month = "09",
+	note = "\url{www.ign.com/articles/2011/09/21/ten-facts-about-the-great-video-game-crash-of-83}",
+}
+
+@book{wolf2012encyclopedia,
+	title={Encyclopedia of Video Games},
+	author={Wolf, Mark},
+	year={2012},
+	publisher={ABC-CLIO}
+}
+
+@unpublished{olstad2009,
+	author = "Scott Olstad",
+	title = "25 Years of Tetris: From Russia With Fun!",
+	year = "2009",
+	month = "05",
+	note = "\url{http://content.time.com/time/arts/article/0,8599,1902950,00.html}",
+}
+
+@misc{xboxelite,
+	author = {Microsoft},
+	title = {Xbox Elite Wireless Controller},
+	note = "\url{http://www.xbox.com/en-US/xbox-one/accessories/controllers/elite-wireless-controller}, accessed 2015-10-26",
+}
+
+@misc{steamcontroller,
+	author = {Valve},
+	title = {Steam Controller},
+	note = "\url{http://store.steampowered.com/universe/controller/}, accessed 2015-10-26",
+}
+
+@misc{2002walker,
+	author = {Trey Walker},
+	title = {The Sims overtakes Myst},
+	year = "2002",
+	month = "03",
+	note = "\url{http://www.gamespot.com/articles/the-sims-overtakes-myst/1100-2857556/}, accessed 2015-11-02",
+}
+
+@misc{2012douglas,
+	author = {Ana Douglas},
+	title = {Here Are The 10 Highest Grossing Video Games Ever},
+	year = "2012",
+	month = "06",
+	note = "\url{http://www.businessinsider.com/here-are-the-top-10-highest-grossing-video-games-of-all-time-2012-6}, accessed 2015-11-02",
+}
+
+@article{sweetser2005scripting,
+	title={Scripting versus emergence: issues for game developers and players in game environment design},
+	author={Sweetser, Penelope and Wiles, Janet},
+	journal={International Journal of Intelligent Games and Simulations},
+	volume={4},
+	number={1},
+	pages={1--9},
+	year={2005},
+	publisher={University of Wolverhampton}
+}
+
+@misc{2015android,
+	author = {Android},
+	title = {Android history},
+	year = "2015",
+	month = "11",
+	note = "\url{https://www.android.com/history/}, accessed 2015-11-26",
+}
+
+@misc{2015forbes,
+	author = {Andy Robertson},
+	title = {'Angry Birds 2' Arrives 6 Years And 3 Billion Downloads After First Game},
+	year = "2015",
+	month = "07",
+	note = "\url{http://www.forbes.com/sites/andyrobertson/2015/07/16/angry-birds-2/}, accessed 2015-11-26",
+}
+
+@misc{2014gamespot,
+	author = {Eddie Makuch},
+	title = {E3 2014: \$399 Xbox One Out Now, Xbox 360 Sales Rise to 84 million},
+	year = "2014",
+	month = "06",
+	note = "\url{http://www.gamespot.com/articles/e3-2014-399-xbox-one-out-now-xbox-360-sales-rise-to-84-million/1100-6420231/}, accessed 2015-12-07",
+}
+
+@misc{2013engadget,
+	author = {Mat Smith},
+	title = {Sony celebrates 80 million PS3s sold, reminds you that it's now seven years old},
+	year = "2013",
+	month = "06",
+	note = "\url{http://www.engadget.com/2013/11/06/80-million-ps3s-sold/}, accessed 2015-12-07",
+}
+
+@misc{2015callofduty,
+	author = {Statistic Brain Research Institute},
+	title = {Call of Duty Franchise Game Sales Statistics},
+	year = "2015",
+	month = "12",
+	note = "\url{http://www.statisticbrain.com/call-of-duty-franchise-game-sales-statistics/}, accessed 2015-12-07",
+}
+
+@misc{2014nintendo,
+	author = {Nintendo Co., Ltd.},
+	title = {Consolidated Sales Transition by Region},
+	year = "2014",
+	month = "06",
+	note = "\url{https://www.nintendo.co.jp/ir/library/historical_data/pdf/consolidated_sales_e1406.pdf}, accessed 2015-12-07",
+}
+
+@misc{2015amiibo,
+	author = {Nintendo},
+	title = {What is amiibo?},
+	year = "2015",
+	month = "12",
+	note = "\url{http://www.nintendo.com/amiibo/what-is-amiibo}, accessed 2015-12-07",
+}
+
+@misc{2015ign,
+	author = {IGN},
+	title = {PS4 vs. Xbox One vs. Wii U Comparison Chart},
+	year = "2015",
+	month = "06",
+	note = "\url{http://www.ign.com/wikis/xbox-one/PS4_vs._Xbox_One_vs._Wii_U_Comparison_Chart}, accessed 2015-12-07",
+}
+
+@misc{2015wiiu,
+	author = {Nintendo},
+	title = {Wii U features},
+	year = "2015",
+	month = "12",
+	note = "\url{http://www.nintendo.com/wiiu/features/}, accessed 2015-12-07",
+}
+
+@misc{2013independent,
+	author = {Tim Walker},
+	title = {Xbox ONE: 'The ultimate all-in-one home entertainment system': Microsoft finally unveils its latest console},
+	year = "2013",
+	month = "05",
+	note = "\url{http://www.independent.co.uk/life-style/gadgets-and-tech/news/xbox-one-the-ultimate-all-in-one-home-entertainment-system-microsoft-finally-unveils-its-latest-8626177.html}, accessed 2015-12-08",
+}
+
+@misc{2013sony,
+	author = {Sony Computer Entertainment Inc.},
+	title = {SONY COMPUTER ENTERTAINMENT INC. INTRODUCES PLAYSTATION4 (PS4)},
+	year = "2013",
+	month = "02",
+	note = "\url{http://www.scei.co.jp/corporate/release/130221a_e.html}, accessed 2015-12-08",
+}
+
+@misc{2013kotaku,
+	author = {Tina Amini},
+	title = {All 24 Of The PS4's Launch Games, Reviewed},
+	year = "2013",
+	month = "11",
+	note = "\url{http://kotaku.com/all-24-of-the-ps4s-launch-games-reviewed-1464421841}, accessed 2015-12-08",
+}
+
+@misc{htcvive,
+	author = {HTC and Valve},
+	title = {{HTC Vive}},
+	note = "\url{http://htcvive.com}, accessed 2015-12-08",
+}
+
+@misc{hoverjunkers,
+	author = {StressLevelZero},
+	title = {Hover Junkers},
+	note = "\url{http://www.hoverjunkers.com/}, accessed 2015-12-08",
+}
+
+@misc{hoverVideo,
+	author = {StressLevelZero},
+	title = {Hover Junkers - Large Room Multiplayer (Video)},
+	note = "\url{https://www.youtube.com/watch?v=Ai4MCmZz28o}, accessed 2015-12-08",
+}
+
+@misc{140game,
+	author = {{Carlsen Games}},
+	title = {140},
+	note = "Game for PC released 16 Oct, 2013. \url{http://game140.com}, accessed 2015-12-08",
+}
+
+@misc{140doublefine,
+	author = {{Double Fine Productions}},
+	title = {140 recommendation},
+	note = "\url{http://store.steampowered.com/curator/6857089-Double-Fine-Productions/?appid=242820}, accessed 2015-12-08",
+}
+
+@misc{blindside,
+	author = {{epicycle}},
+	title = {{BlindSide}},
+	year = "2012",
+	note = "\url{http://www.blindsidegame.com/}, accessed 2015-12-11",
+}
+
+@misc{2015psstore,
+	author = {Sony Computer Entertainment},
+	title = {PlayStation Store FAQ’s},
+	year = "2015",
+	month = "12",
+	note = "\url{https://support.us.playstation.com/articles/en_US/KC_Article/PlayStation-Store-FAQ-s}, accessed 2015-12-08",
+}
+
+@misc{2015msstore,
+	author = {Microsoft},
+	title = {Buying and using digital games on Xbox One FAQ},
+	year = "2015",
+	month = "12",
+	note = "\url{support.xbox.com/en-US/xbox-one/games/digital-game-faq}, accessed 2015-12-08",
+}
+
+@misc{2012eurogamer,
+	author = {Rich Stanton},
+	title = {Full Steam Ahead: How Valve's Platform Just Gets Hotter},
+	year = "2015",
+	month = "12",
+	note = "\url{support.xbox.com/en-US/xbox-one/games/digital-game-faq}, accessed 2015-12-08",
+}
+
+@misc{2009gamasutra,
+	author = {Kris Graft},
+	title = {Stardock Reveals Impulse, Steam Market Share Estimates},
+	year = "2009",
+	month = "11",
+	note = "\url{http://www.gamasutra.com/php-bin/news_index.php?story=26158}, accessed 2015-12-08",
+}
+
+@misc{2015eurogamer,
+	author = {Jeffrey Matulef},
+	title = {Xbox 360 at 10: How XBLA changed the industry forever},
+	year = "2015",
+	month = "11",
+	note = "\url{http://www.eurogamer.net/articles/2015-11-27-xbox-360-at-10-how-xbla-changed-the-industry-forever}, accessed 2015-12-08",
+}
+
+@misc{2015watlington,
+	author = {William Watlington},
+	title = {A Short History of Indie Games, and a Look into the Future},
+	year = "2015",
+	month = "07",
+	note = "\url{http://updownright.com/2015/03/07/a-short-history-of-indie-games-and-a-look-into-the-future/}, accessed 2015-12-08",
+}
+
+@phdthesis{huiberts2010captivating,
+	title={Captivating sound the role of audio for immersion in computer games},
+	author={Huiberts, Sander},
+	year={2010},
+	school={University of Portsmouth}
+}
+
+@article{arsenault2009video,
+	title={Video game genre, evolution and innovation},
+	author={Arsenault, Dominic},
+	journal={Eludamos. Journal for Computer Game Culture},
+	volume={3},
+	number={2},
+	pages={149--176},
+	year={2009}
+}
+
+@misc{2014allgame,
+	author = {AllGame},
+	title = {Game genres},
+	year = "2014",
+	month = "12",
+	note = "\url{http://web.archive.org/web/20141212120416/http://www.allgame.com/genres.php}, accessed 2015-12-09",
+}
+
+@article{2011dukenukem,
+	title={Duke Nukem Forever},
+	author={Dan Whitehead},
+	year={2011},
+	note = "\url{http://www.eurogamer.net/articles/2011-06-12-duke-nukem-forever-review}, accessed 2015-12-14"
+}
+
+@article{1992basili,
+	title={Software modeling and measurement: the Goal/Question/Metric paradigm},
+	author={Basili, Victor R},
+	year={1992}
+}
+
+@misc{2004nsider,
+	author = {Jeton Grajqevci},
+	title = {Remembrance of a Pioneer},
+	year = "2004",
+	month = "04",
+	note = "\url{http://web.archive.org/web/20040404130954/http://n-sider.com/articleview.php?articleid=270}, accessed 2015-12-14",
+}
+
+@misc{2015metacritic,
+	author = {Metacritic},
+	title = {Duke Nukem Forever},
+	year = "2015",
+	month = "12",
+	note = "\url{http://www.metacritic.com/game/xbox-360/duke-nukem-forever}, accessed 2015-12-14",
+}
+
+@misc{1999,
+	author = {Joe Fielder},
+	title = {Superman: The New Superman Adventures Review},
+	year = "1999",
+	month = "06",
+	note = "\url{http://web.archive.org/web/20100727155122/http://www.gamespot.com/n64/adventure/superman64/review.html?}, accessed 2015-12-14",
+}
+
+@misc{2015yahoo,
+	author = {Chris Morris},
+	title = {Happy 30th birthday, 'Super Mario Bros.'!},
+	year = "2015",
+	month = "09",
+	note = "\url{https://www.yahoo.com/tech/s/happy-birthday-super-mario-181332681.html?nf=1}, accessed 2015-12-14",
+}
+
+@misc{2014usgamer,
+	author = {Jeremy Parish},
+	title = {Too Powerful for Its Own Good, Atari's Lynx Remains a Favorite 25 Years Later},
+	year = "2014",
+	month = "04",
+	note = "\url{http://www.usgamer.net/articles/too-good-for-its-day-ataris-lynx-remains-a-fan-favorite-25-years-later}, accessed 2015-12-14",
+}
+
+@misc{2014gamesradar,
+	author = {GamesRadar},
+	title = {Best Dreamcast games of all time},
+	year = "2014",
+	month = "09",
+	note = "\url{http://www.gamesradar.com/best-dreamcast-games-all-time/}, accessed 2015-12-14",
+}
+
+
+@article{plasencia2015one,
+	title={One step beyond virtual reality: connecting past and future developments},
+	author={Plasencia, Diego Martinez},
+	journal={XRDS: Crossroads, The ACM Magazine for Students},
+	volume={22},
+	number={1},
+	pages={18--23},
+	year={2015},
+	publisher={ACM}
+}
+
+@misc{2014hardcore,
+	author = {Alex Carlson},
+	title = {A Kinect-less Xbox One Signals the Death of Motion Gaming},
+	year = "2014",
+	month = "05",
+	note = "\url{http://www.hardcoregamer.com/2014/05/19/a-kinect-less-xbox-one-signals-the-death-of-motion-gaming/85360/}, accessed 2015-12-15",
+}
+
+@misc{2015gameon,
+	author = {G. Lehri},
+	title = {Is the PS Move dead?},
+	year = "2015",
+	month = "01",
+	note = "\url{http://www.gameondaily.com/ps-move-dead/}, accessed 2015-12-15",
+}
+
+@misc{2014sciencebeta,
+	author = {ScienceBeta},
+	title = {Wii Vs. Playstation 3 Vs. Xbox 360: Home Fitness Gaming Consoles Compared},
+	year = "2014",
+	month = "08",
+	note = "\url{http://sciencebeta.com/wii-vs-playstation-3-vs-xbox-360-home-fitness-gaming-consoles-compared/}, accessed 2015-12-15",
+}
+
+@misc{2015kinect,
+	author = {Microsoft},
+	title = {Meet Kinect for Windows},
+	year = "2015",
+	month = "12",
+	note = "\url{https://dev.windows.com/en-us/kinect}, accessed 2015-12-15",
+}
+
+@article{achterbosch2008massively,
+	title={Massively multiplayer online role-playing games: the past, present, and future},
+	author={Achterbosch, Leigh and Pierce, Robyn and Simmons, Gregory},
+	journal={Computers in Entertainment (CIE)},
+	volume={5},
+	number={4},
+	pages={9},
+	year={2008},
+	publisher={ACM}
+}
+
+@book{csikszentmihalyi1991flow,
+	title={Flow: The psychology of optimal experience},
+	author={Csikszentmihalyi, Mihaly and Csikzentmihaly, Mihaly},
+	volume={41},
+	year={1991},
+	publisher={HarperPerennial New York}
+}
+
+@inproceedings{malone1980makes,
+	title={What makes things fun to learn? Heuristics for designing instructional computer games},
+	author={Malone, Thomas W},
+	booktitle={Proceedings of the 3rd ACM SIGSMALL symposium and the first SIGPC symposium on Small systems},
+	pages={162--169},
+	year={1980},
+	organization={ACM}
+}
+
+@misc{ward2008engine,
+	author = {Jeff Ward},
+	title = {What is a Game Engine?},
+	year = "2008",
+	month = "04",
+	note = "\url{http://www.gamecareerguide.com/features/529/what_is_a_game_.php}, accessed 2016-06-06",
+}
+
+@misc{enger2013engine,
+	author = {Michael Enger},
+	title = {Game Engines: How do they work?},
+	year = "2013",
+	month = "06",
+	note = "\url{http://www.giantbomb.com/profile/michaelenger/blog/game-engines-how-do-they-work/101529/}, accessed 2016-06-06",
+}
+@misc{malik2016engine,
+	author = {Waqas Malik},
+	title = {Top 5 3D Game Engines for Indie Game Developers},
+	year = "2016",
+	month = "02",
+	note = "\url{http://www.useoftechnology.com/top-5-3d-game-engines-indie-game-developers/}, accessed 2016-06-06",
+}
+@misc{unreal2016engine,
+	author = {Epic Games},
+	title = {Unreal Engine Features},
+	year = "2016",
+	month = "06",
+	note = "\url{https://www.unrealengine.com/unreal-engine-4}, accessed 2016-06-06",
+}
+@misc{rashid2016engine,
+	author = {Zamilur Rashid},
+	title = {3 Game Engines Every Indie Developer should try},
+	year = "2016",
+	month = "02",
+	note = "\url{https://www.linkedin.com/pulse/3-game-engines-every-indie-developer-should-try-zamilur-rashid-csm}, accessed 2016-06-06",
+}
+
+@misc{bratcher2013unity,
+	author = {Daniel Bratcher},
+	title = {Unity games sweep App Store awards},
+	year = "2013",
+	month = "02",
+	note = "\url{http://blogs.unity3d.com/2013/02/19/unity-games-sweep-app-store-awards/}, accessed 2016-06-06",
+}
+
+@misc{unity2016get,
+	author = {Unity Technologies},
+	title = {Get Unity},
+	year = "2016",
+	month = "06",
+	note = "\url{http://unity3d.com/get-unity}, accessed 2016-06-06",
+}
+
+@misc{unity2016editor,
+	author = {Unity Technologies},
+	title = {A feature-rich and highly flexible editor},
+	year = "2016",
+	month = "06",
+	note = "\url{http://unity3d.com/unity/editor}, accessed 2016-06-06",
+}
+
+@misc{unity2016script,
+	author = {Unity Technologies},
+	title = {Creating and Using Scripts},
+	year = "2016",
+	month = "06",
+	note = "\url{http://docs.unity3d.com/Manual/CreatingAndUsingScripts.html}, accessed 2016-06-06",
+}
+
+@misc{papadopoulos2016cry,
+	author = {John Papadopoulos},
+	title = {Crytek open sources CRYENGINE, available for download to everyone},
+	year = "2016",
+	month = "05",
+	note = "\url{http://www.dsogaming.com/news/crytek-open-sources-cryengine-available-download-everyone/}, accessed 2016-06-07",
+}
+
+@misc{jasani2014engine,
+	author = {Tejas Jasani},
+	title = {The top 10 engines that can help you make your game},
+	year = "2014",
+	month = "08",
+	note = "\url{http://venturebeat.com/2014/08/20/the-top-10-engines-that-can-help-you-make-your-game/}, accessed 2016-06-07",
+}
+
+@misc{fabrik2016licence,
+	author = {Idea Fabrik},
+	title = {Licensing Options},
+	year = "2016",
+	month = "06",
+	note = "\url{http://www.heroengine.com/heroengine/licensing-options/}, accessed 2016-06-07",
+}
+
+@misc{yoyo2016gamemaker,
+	author = {YoYo Games},
+	title = {GameMaker:Studio},
+	year = "2016",
+	month = "06",
+	note = "\url{http://www.yoyogames.com/}, accessed 2016-06-07",
+}
+
+@misc{wave2016engine,
+	author = {Wave Corporation},
+	title = {Wave Engine},
+	year = "2016",
+	month = "06",
+	note = "\url{https://waveengine.net/}, accessed 2016-06-07",
+}
+
+@misc{1up2008gta,
+	author = {1UP Staff},
+	title = {Grand Theft Auto IV},
+	year = "2008",
+	month = "04",
+	note = "\url{http://www.1up.com/previews/grand-theft-auto-iv_3}, accessed 2016-06-07",
+}
+
+@misc{bayer2009assassins,
+	author = {Thilo Bayer},
+	title = {Assassin's Creed 2: Engine detailed},
+	year = "2009",
+	month = "05",
+	note = "\url{http://www.pcgameshardware.com/aid,684874/Assassins-Creed-2-Engine-detailed/News/}, accessed 2016-06-07",
+}
+
+@misc{makuzawa2015final,
+	author = {Red Makuzawa},
+	title = {Former Luminous Engine Lead talks transition from Final Fantasy Versus XIII to Final Fantasy XV},
+	year = "2015",
+	month = "12",
+	note = "\url{http://www.novacrystallis.com/2015/12/former-luminous-engine-lead-talks-transition-from-final-fantasy-versus-xiii-to-final-fantasy-xv/}, accessed 2016-06-07",
+}
+
+@misc{indiedb2015engine,
+	author = {Indie DB},
+	title = {Game Engines},
+	year = "2016",
+	month = "06",
+	note = "\url{http://www.indiedb.com/engines?sort=ranktoday-asc}, accessed 2016-06-07",
+}
+
+@misc{git2016vcs,
+	author = {Git},
+	title = {Getting Started - About Version Control},
+	year = "2016",
+	month = "06",
+	note = "\url{https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control}, accessed 2016-06-07",
+}
+
+@misc{pixel2016prospector,
+	author = {PixelProspector},
+	title = {Indie Resources},
+	year = "2016",
+	month = "06",
+	note = "\url{http://www.pixelprospector.com/indie-resources}, accessed 2016-06-07",
+}
+
+@misc{itchio2016payment,
+	author = {itch Corp},
+	title = {Create a custom page to instantly distribute or sell your indie games},
+	year = "2016",
+	month = "06",
+	note = "\url{https://itch.io/developers}, accessed 2016-06-07",
+}
