--- a/doc/report/study/chp_games_history.tex
+++ b/doc/report/study/chp_games_history.tex
@@ -1,7 +1,60 @@
 \chapter{Games History}
-\section{Early Video Games}
-\section{Casual Gaming}
-\section{Home Entertainment Consoles}
-\section{Digital Distribution}
-\section{Online vs Local Multiplayer}
+%entertainment games...
+\label{ch:gameshistory}
+To understand why computer games are the way they are today it is important to know their history and evolution. This chapter will take a look at the history of computer games.
+This research was conducted in the specialization project and is based on work done by Overmars \cite{overmars2012}.
 
+%ønsker å gi litt bakgrunn for spillmedie og hvordan teknologier kom til, utvikling.
+
+
+\note{Hvordan skal jeg relatere dette til oppgaven? hvorfor har jeg dette med?}
+
+\section{Early Video Games}
+\note{Tenkte å ha en kjapp oppsumering fra 1950-2000 her. Ikke like detaljert som tidligere.}
+
+\section{Casual Gaming}
+\label{sec:casualgaming}
+% Casual games
+Video games had been primarily for the dedicated gamer, but during the 2000s there was a rise in casual games. With more households having faster internet connections and more people using computers, video games became more accessible to people that were not traditionally gamers. Many of the games were played in the browser and was financed by ad revenue alone. A key example is the highly successful game Bejeweled (2001). Another trend was games on Facebook, like Farmville (2009) which had over 80 million users in 2012.
+
+% SmartPhones
+With the introduction of the iPhone (2007), the mobile gaming market started to blossom. The most important factor was the App Store which allowed every developer to create games and sell them through Apples store. This made it possible for individuals and small teams of developers to develop games that could reach millions of users. The amount of content grew and games were sold for USD 1; some games were even free and supported by ad revenue. Apple got some competition in 2008 when the android mobile operating system hit the market. With phones created by Samsung HTC and Sony, android quickly became popular and even had its own application market similar to the App Store, called Android Market \cite{2015android}. The most popular game for the smart phones is Angry birds (pictured in Figure \ref{fig:angrybirds}), which had been downloaded over three billion times as of july 2015 \cite{2015forbes}. One of the reasons for its big success is its freemium model, where the game is initially free, but supports in-app purchases and displays advertisements.
+
+\hfigure{angrybirds}{Angry Birds, the most downloaded game for smart phones}{0.7}
+
+\section{Motion Controls}
+Nintendo was the company that pioneered motion controls for the consoles. They chose to create a less powerful console, the \gls{wii} in 2006, without HD graphics and catered to a more casual audience with cartoonish graphics, and games geared toward children. They also created a new controller, the Wiimote, that looked like a remote that could track the player's arm and hand movements (more about this controller in Section \ref{wiimote}). The most popular game was Wii Sports, shown in Figure \ref{fig:wiisports} that featured a collection of sports games that used the motion controller to play. Nintendo was more successful than the other consoles and had sold over 100 million consoles worldwide as of June 2014 \cite{2014nintendo}.
+
+Microsoft and Sony saw the success of the \gls{wii} and created their own motion control systems. Microsoft created a camera system that tracked the full body of the player, called the Kinect in 2010. Sony made a device similar to the Wiimote in 2010, called the Playstaton Move. The Move is a handheld remote like controller with a coloured light at the end and a camera to track the controller in 3D space. More information about the motion control devices in Chapter \ref{chap:interaction}
+
+\hfigure{wiisports}{Wii Sports, a popular motion controlled game}{0.7}
+\section{Home Entertainment Consoles}
+%TODO fix title
+% XBONE, PS4, WiiU
+The console rivalry continues, and Nintendo, Sony and Microsoft still competes to rule the console market in 2015.
+Nintendo started what is considered the current generation of consoles with the \gls{wiiu} as a successor to the \gls{wii} in 2012. The \gls{wiiu} features a tablet like gamepad with a 6 inch touch screen, motion sensors, and traditional buttons and joysticks \cite{2015wiiu}. Unlike the Wii, the \gls{wiiu} does have HD graphics, but it is still the least powerful of the current generation of consoles \cite{2015ign}. Nintendo's primary target audience is still children, and Nintendo has created a line of physical game accessories called amiibo. Amiibo, illustrated in Figure \ref{fig:amiibo}, are toys like figures and cards that can interact with the games and provide special functionality like an extra character, special items, and new adventures \cite{2015amiibo}. 
+
+\hfigure{amiibo}{An amiibo figure interacting with the Wii U gamepad}{0.7}
+
+Microsoft and Sony released their consoles at the same time for the 2013 holiday season. Microsoft's \gls{xbone} focused on creating an all-in-one home entertainment experience, hence the name. The \gls{xbone} can rent films, or play live television using an interactive TV guide. The \gls{xbone} also features Kinect 2.0, a more powerful version of the motion control system for Xbox. Two of the top games for the \gls{xbone} at launch was Call of Duty Ghosts (pictured in Figure \ref{fig:codghosts}) and Forza Motorsport 5 \cite{2013independent}.
+
+Sony focused on the games themselves and created a powerful console. The \gls{ps4} has features like game streaming, which makes it possible to stream games from a \gls{ps4} to a phone or tablet. The \gls{ps4} also has support for their motion control system Move. Sony also focused on social interaction by being able to share screen shots and game clips with a share button on the controller \cite{2013sony}. Sony continued one of their top game series with Killzone Shadow Fall at launch \cite{2013kotaku}.
+
+The \gls{xbone} and the \gls{ps4} have a lot of similar features. They both have the support for game streaming to Twitch and Ustream, and can record game clips as you play. Both consoles also support third party applications such as Netflix and YouTube. The consoles are becoming more about entertainment than just about the games. Gamers want to have access to the internet from their couch without having to use the computer. Downloadable games is also a popular feature, where all the games are available as a digital download instead of buying a game disc \cite{2015ign}. Even though the \gls{xbone} and \gls{ps4} support the motion control systems from the previous generation, they never really reached the success of the WiiMote. In recent years these motion control system have started to fade in popularity, but some niche areas still remain, such as fitness, dance, and party games. \cite{2015gameon, 2014hardcore, 2014sciencebeta}
+
+\hfigure{codghosts}{Call of Duty Ghosts, a popular launch title for the Xbox One and PlayStation 4}{0.7}
+
+\section{Digital Distribution}
+Downloading the games from the internet via the built in store of the console was something that was introduced with the \gls{xb360} and \gls{ps3}, however not all titles were available for digital download. With \gls{ps4} and \gls{xbone} though, all disc titles are also available for digital download. This makes buying games less of a hassle, because you don't have to go to a physical store and you can buy it whenever you want. It is also possible to pre-order and pre download titles so that they are ready to play on the release date \cite{2015msstore, 2015psstore}.
+
+Buying games digitally was something that existed on the PC, and the majority of PC gamers download and play games today. A popular platform for buying games digitally on the PC is Steam. Steam was created by Valve in 2002 to easily be able to update their games \cite{2012eurogamer}. It then went on to become the biggest digital distribution platform for games on the PC \cite{2009gamasutra}.
+
+Digital distribution of games does not only allow for big game companies to release games; it allows for independent game developers to create and share their games with the world. These types of games are called indie games and have been around since the dawn of the computer. Indie games are often more innovative than games from big companies because they have less constraints and pressure from publishers to create best selling games. Modern indie games that was distributed digitally, became popular at the later half of the 2000s with Cave Story (2004) being one of the first. Cave story was initially released as freeware for the PC and quickly went viral. \gls{xb360}, \gls{ps3}, and the \gls{wii} started to feature indie games in their online stores. Probably most notably was the Xbox Live Arcade together with the framework XNA created by Microsoft to release games on their \gls{xb360}. Some very popular games came out of that like Braid, Super Meat Boy, and Castle Crashers \cite{2015eurogamer}. Steam also housed indie games in their store and even released a platform called Greenlight where developers can showcase their games and the community gets to decide which games get accepted into Steam \cite{2015watlington}.
+%TODO Minecraft?
+
+%\section{Community creations}
+
+\section{Summary}
+This chapter has explored how video games have evolved from being created by scientists and students to becoming a billion dollar entertainment industry. Technologies have advanced the industry, 3D gaming created first person shooters, online gaming creating massively multiplayer online games, and motion controls have created a whole new way to interact with video games. Video game consoles have also become more of a home entertainment device with the ability to watch movies and television, and have also become more social with more options for connecting and sharing content with friends. In recent years there has been a shift towards digital distribution which has enabled independent game developers to create games for the masses.
+
+\note{Binde sammen hvorfor ting ble sett på osv.}
