--- a/doc/report/study/chp_immersion.tex
+++ b/doc/report/study/chp_immersion.tex
@@ -1,5 +1,165 @@
 \chapter{Immersion}
-\section{Gameflow and Game Enjoyent}
-\section{Graphics and Audio}
+\label{ch:immersion}
+% TODO update intro
+% CONSIDER adding a section for social/player interaction
+
+This chapter takes a look at different aspects of game immersion.
+Immersion is a part of gameflow \cite{sweetser2005gameflow} and affects the player's involvement in the game and loss of connection to their surroundings.
+
+There are many different parts required to make the player immersed in a game.
+At first glance, these usually involves a mix of visuals and audio.
+For console games, the use of haptic feedback is also common.
+Other measures to keep the player immersed become apparent when looking deeper.
+One of these is through the setting and storyline of a game, and there are different ways for a storyline to unfold.
+If a game does not keep up with the standard set by the other game aspects, the suspense of disbelief may be broken \cite{overmars2012}.
+
+\note{Hvorfor har jeg med immersion?}
+%Ha med med tanke på spørreundersøkelse. det mest interessane er den sosiale biten. forskjellige roller, samspillet er en stor driver for imersion.
+%viktig med tanke på utvikling.
+
+
+\section{Gameflow and Game Enjoyment}
+\label{immersionGameflow}
+A player who does not enjoy a game will not continue to play it.
+This is where gameflow becomes important, as a player who is experiencing gameflow is enjoying the game.
+The term gameflow was introduced by Sweetser \cite{sweetser2005gameflow} to create a model for player enjoyment in video games.
+It is based on the term flow from Csikszentmihalyi \cite{csikszentmihalyi1991flow}, which is described as \textcquote{csikszentmihalyi1991flow}{so gratifying that people are willing to do it for its own sake, with little concern for what they will get out of it, even when it is difficult or dangerous}.
+Immersion is one of the elements of gameflow.
+An immersed player should be deeply involved in the game without much effort.
+They should become less aware of their surroundings and self, experience an altered sense of time, and feel emotionally and viscerally involved in the game.
+Immersion, along with the other elements of gameflow, are described in greater detail by Sweetser \cite{sweetser2005gameflow}.
+
+% What makes things fun to learn...
+Malone \cite{malone1980makes} categorizes the essential characteristics that makes games fun into three categories: challenge, fantasy, and curiosity.
+On the subject of challenge, it is important for a game to have a goal and the outcome of whether or not the goal is achieved should be uncertain.
+Creation of good goals for a game can come from different approaches.
+Combining the challenge with fantasy will make the game more interesting.
+Conveying the fantasy to the player can be achieved by the use of graphics (including \gls{ar} or \gls{vr}), audio, haptic feedback, and through the setting and storyline of the game.
+Creating the fantasy can be done through different means, including a scripted or emergent approach.
+Curiosity is a driving force to learn and explore.
+The game should give the player the sensory and cognitive stimuli to keep playing, which can be implemented using the topics described in the next sections in different ways.
+
+
+\section{Graphics}
+\label{immersionGraphics}
+% History
+As graphics hardware has improved through the years, this aspect of games has seen significant changes since the early days of video games.
+%\nb{Consider using the tennis figure/example from Overmars (or a similar).}
+From simple black and white two-dimensional games to almost photo realistic three-dimensional games.
+In more recent years, the technology for virtual and augmented reality has also improved and become more easily available.
+
+Although the technology for graphically intensive games is available, it is not always used, even in more recent games.
+Some games strive for realism, while others may aim for a more stylish or simple look.
+Among the factors that may influence this decision is the genre, target audience, and budget.
+There are also considerations to be taken regarding accessibility for colour blind or visually impaired players.
+
+% consider moving this paragraph to the summary or results
+There are different reasons for not choosing a realistic visual style.
+One such reason is a lack of realism in other aspects of the game.
+This could be the \gls{ai}, as mentioned in Section \ref{immersionAi} or how the game is controlled.
+Another reason could be to complement other aspects of the game.
+\={O}kami \cite{okami2006}, a game based on Japanese storytelling, uses a visual style described as "sumi-e / cel-shaded / 3D" \cite{donovan2013pretty}, which complements the story and setting of the game.
+See Figure \ref{fig:okamigraphics} for an example of the graphics from \={O}kami.
+\hfigure{okamigraphics}{The graphical style of \={O}kami}{0.7}
+
+% Important ... things
+% Examples?
+%% Mention Okami shading? % \={O}kami \cite{okami2006}
+
+
+\section{Audio}
+\label{immersionAudio}
+% Check article: The Role of Audio for Immersion in Computer Games
+
+% Important!
+Another important aspect of a game is the audio design.
+%% Do research...
+% Music
+Music sets the tone and intensity for the moment.
+% Feedback
+Audio can also give feedback to actions performed by the player.
+From the sounds and music, the player can get a hint of what is about to happen.
+According to Huiberts \cite{huiberts2010captivating}, sound can help the player get immersed in the game, but it can also have the opposite effect if it is not used properly.
+It is also worth noting that a player might be deaf or hard of hearing, which brings up the subject of accessibility in this regard too.
+
+In some games the audio can be a central part of the gameplay, as it is in the game 140 \cite{140game}, described by Double Fine as
+\textcquote{140doublefine}{A musical platformer with super tight puzzle design and a striking audiovisual presentation.}.
+The elements in the game is controlled by the music which, as the name might suggest, is playing at 140 pbm.
+Each element has it's own, recognizable sound that plays to the beat of the music, which means that the player can know the nature of the upcoming obstacles and challenges before they appear on screen.
+Figure \ref{fig:140} shows a screenshot from 140.
+\hfigure{140}{Screenshot of 140}{0.7}
+
+While audio is one of many aspects in most games, there exists games based solely on sound.
+The graphics are very simple or completely non-existent.
+Interaction with the game may be achieved through a normal gamepad or with specialized controllers.
+An advantage of such games is that they may be as available for a visually impaired player as a sighted one.
+BlindSide \cite{blindside} is one such game where the player navigates a 3D world with nothing but sound.
+Played on an iOS device, the game uses the top, middle, and bottom of the touch screen along with gyroscopes to control the game.
+The graphics in the game is a very simple interface for the three zones of interaction on the touch screen.
+
+\section{Haptic Feedback}
+\label{immersionHaptic}
+The purpose of haptic feedback is to give the player some sort of physical feedback to in-game events.
+In the context of games, force feedback is another common name \cite{cummings2007evolution}.
+While this can provide new dimension to the game, some may not enjoy it.
+It is not uncommon for games to provide an option to turn it off.
+
+One common example of physical feedback is vibrating the gamepad.
+For the \gls{n64}, this was achieved with the Rumble Pak accessory.
+It has become a common part of most game controllers in later console generations \cite{cummings2007evolution}.
+Another example of force feedback in interaction devices is steering wheels for driving games.
+The feeling of steering a car can be simulated by resisting, to some degree, the force asserted by the player on the wheel to turn it.
+
+
+\section{Virtual and Augmented Reality}
+\label{immersionARVR}
+\gls{ar} is the concept of augmenting the real world with virtual elements, while \gls{vr} is the concept of showing the user an entirely virtual reality.
+While \gls{vr} often is restricted by the need for the user to wear a head mounted display, \gls{vr} also has the option of using a mobile device. Virtual reality headsets has seen an increase in popularity lately and are expected to really hit its prime in 2016, with devices like Occulous Rift, Microsoft Hololens, and HTC Vive coming. The price point is still a little steep to be present in every home just yet, but it will be interesting to see its progress and evolution \cite{plasencia2015one}
+
+% Gestures
+There are many ways of interacting with these systems.
+One way is to use a camera or sensor based system to track movement and recognize gestures performed by the user.
+% Special remotes http://www.htcvr.com/
+Another is to use specialized input devices, as is possible for HTC Vive \cite{htcvive}.
+Combining multiple methods of input is another option.
+
+% Mention Hover Junkers?
+Hover Junkers is a game developed by StressLevelZero entirely for \gls{vr} \cite{hoverjunkers}.
+The game tracks the players movement and the player interacts with the world using \gls{vr} controllers.
+The player has limited movement within a virtual ship that maps to the movement in the real world, but the ship can move and navigate the much larger virtual world.
+By doing this, the game can have a large world and still allow the player to play in a smaller room.
+Figure \ref{fig:hoverjunkers} shows a screenshot of a video where a Hover Junkers developer plays the game \cite{hoverVideo}.
+\hfigure{hoverjunkers}{Hover Junkers gameplay}{0.7}
+
 \section{Setting and Storyline}
+\label{immersionStoryline}
+A game based only on a core concept may not in itself hold many hours of gameplay.
+By giving the player a setting to the game and a storyline to play, they may find extra motivation to continue playing and give them a greater interest and immersion in the game \cite{overmars2012}.
+This can be achieved by adding an overarching story, smaller stories, character progression, a game world, and other elements outside the core game concept.
+
 \section{Social Interaction}
+\note{Skrive om social interaction}
+
+\section{Summary}
+\note{Denne delen må nok skrives om litt for å passe}
+In this chapter some of the different aspects that may affect immersion in a game has been discussed.
+While each topic can be the subject of a closer study by it self, this chapter only gives an overview and some examples.
+
+In the first section, the idea behind gameflow and enjoyment in games is described and put in the context of the following sections.
+
+The next sections describe the direct links for giving the player feedback from the game.
+Graphics provide an important interface to most games, although some games without a graphical interface exists.
+Audio can be used both for ambiance and as an essential aspect of a game.
+Giving the player a form of haptic feedback may also give a stronger sense of immersion.
+\gls{ar} and \gls{vr} technology opens the gates for new ways of playing and interacting with games.
+
+Game content is another important aspect.
+Creating a setting and storyline in a game may have a significant influence on immersion and motivation.
+There is a multitude of variations and options within each field which all bring something different to the game.
+Some combinations of these may work better than others.
+Using one or more of these effects the wrong way may break the immersion, even if other aspects are well implemented.
+Accessibility for gamers with disabilities is also a subject to keep in mind when developing games.
+
+\gls{ar} and \gls{vr} are both current technologies that may have a large potential for innovation.
+The concept of using emergence and alternative uses of \gls{ai} methods may also prove to hold large innovative potential.
+Creating games with accessibility in mind may be a challenge, but may hold a potential for innovative games.
