--- a/doc/report/study/part_study.tex
+++ b/doc/report/study/part_study.tex
@@ -1,3 +1,5 @@
+\epigraphhead[400]{This describes the literature study that was conducted in this thesis to help answer the research questions and support the results that were obtained.}
+
 \part{Literature Study}
 \input{study/chp_games_history}
 \input{study/chp_interaction_devices}
