--- a/doc/report/init/titlepage.tex
+++ b/doc/report/init/titlepage.tex
@@ -7,6 +7,7 @@
 	\vspace{1.5cm}
 	{\huge\bfseries \uppercase{Alternative games} \\ 
 	\Large A cooperative video game with different roles - concept and experimentation\par}
+%collaborative gameplay for children - game concept and evaluation
 	\vspace{2cm}
 	{\Large\itshape David Hovind\par}
 	\vfill
