--- a/doc/report/results/part_results.tex
+++ b/doc/report/results/part_results.tex
@@ -1,3 +1,5 @@
+\epigraphhead[400]{This part explains the design and implementation of the video game prototype that was developed for this thesis.}
+
 \part{Design and Implementation}
 \input{results/chp_design}
 \input{results/chp_architecture}
